# squid

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  TODO  rustfmt.toml
ant/: .gitignore  Makefile  README.md
ant/src/: common.h  ld.c  tls.c
ewe/: Cargo.toml  README.md
ewe/src/: asm.rs  container.rs  getopt.rs  lib.rs  listing.rs
ewe/src/toolchain/: ar.rs  gas.rs  ld.rs  mod.rs
examples/exim/: .gitignore  Makefile  NOTES.md  build.sh  cross-compile-exim.patch  exim-fuzzer.rs  exim.patch  libdb.patch
examples/helloworld/: .gitignore  Makefile  README.md  main.c  run-helloworld.rs  syscall.s
examples/musl/: README.md  build.sh  cancel.patch  cmsg.patch  glibc-exports.patch  libpthread.patch  libresolv.patch  musl-patch  tls.patch
examples/musl/byte-level-permissions/: memchr.patch  memcpy.patch  memmove.patch  memset.patch  stpcpy.patch  strchr.patch
examples/readelf/: .gitignore  README.md  binutils.patch  build.sh  readelf-fuzzer.rs
examples/readme-demo/: .gitignore  README.md  demo.rs  test.c
squid/: Cargo.toml
squid/src/: compiler.rs  event.rs  lib.rs  listing.rs  logger.rs  runtime.rs
squid/src/backends/: backend.rs  mod.rs
squid/src/backends/clang/: address.rs  backend.rs  concretize.rs  event.rs  exec.rs  heap.rs  memory.rs  mod.rs  perms.rs  preprocess.rs  registers.rs  runtime.rs  symbol.rs  variables.rs
squid/src/backends/clang/codegen/: lifter.rs
squid/src/backends/multiverse/: address.rs  backend.rs  concretize.rs  exec.rs  heap.rs  memory.rs  mod.rs  preprocess.rs  registers.rs  runtime.rs  symbol.rs
squid/src/backends/multiverse/codegen/: lifter.rs  mod.rs  subcfg.rs
squid/src/backends/multiverse/tests/: codegen.rs
squid/src/frontend/: chunk.rs  dependency.rs  elf.rs  error.rs  fixedvec.rs  idmap.rs  image.rs  mod.rs  perms.rs  pointer.rs  reloc.rs  section.rs  symbol.rs  tls.rs
squid/src/frontend/ao/: cfg.rs  engine.rs  error.rs  events.rs  func.rs  lifter.rs  mod.rs  ops.rs
squid/src/frontend/symbolization_passes/: arith.rs  deadcode.rs  empty.rs  metadata.rs  mod.rs  propagate.rs  regcache.rs  relax.rs  symbolize.rs
squid/src/kernel/: fs.rs  linux.rs  mod.rs  structs.rs
squid/src/passes/: asan.rs  breakpoint.rs  dot.rs  mod.rs  pass.rs  verify.rs
squid/src/riscv/: fflags.rs  ieee754.rs  instr.rs  mod.rs  register.rs  rm.rs  syscalls.rs
squid_ewe/: Cargo.toml
squid_ewe/src/: env.rs  listing.rs
squid_ewe/src/toolchain/: cc1.rs  gas.rs  ld.rs
tests/: Cargo.toml
tests/benchmark/: .gitignore  Makefile  README.md  benchmark.rs  main.c
wiki/: EVENTS.md  MULTIVERSE.md  PROCESS_IMAGE.md  README.md  TOOLCHAIN.md
wiki/PROCESS_IMAGE/: README.md
