[workspace]
members = ["squid_ewe", "squid", "tests"]
default-members = ["squid"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true

[workspace.package]
version = "2.0.2"
authors = ["Patrick D."]
edition = "2021"
license = "MIT"
repository = "https://github.com/fkie-cad/squid"
keywords = ["emulation", "fuzzing", "security"]

