[package]
name = "squid"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
ewe = { path = "../ewe" }
goblin = { version = "0.7.1", default-features = false, features = ["std", "elf32", "elf64", "endian_fd"]}
memmap2 = "0.7.1"
indicatif = "0.17.1"
colored = "2.0.0"
thiserror = "1.0.40"
num-traits = "0.2.15"
paste = "1.0"
rustc-hash = "1.1.0"
libc = "0.2"
libloading = "0.8"
ahash = "0.8"

[dev-dependencies]
rand = "0.8.5"
libafl = "0.12.0"
libafl_bolts = "0.12.0"
clap = { version = "4.4", features = ["derive"] }
serde = "1.0"
mimalloc = { version = "0.1", default-features = false }

[features]
default = ["tui"]

# Generate traps in JITed code
breakpoints = []

# Enables animations in the terminal
tui = []

[[example]]
name = "readelf_fuzzer"
path = "../examples/readelf/readelf-fuzzer.rs"

