[package]
name = "squid"
description = "A RISC-V emulator with AOT compilation for fuzzing"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
ewe = { path = "../ewe" }
goblin = { version = "0.7", default-features = false, features = ["std", "elf32", "elf64", "endian_fd"]}
memmap2 = "0.7"
indicatif = "0.17"
colored = "2.0"
thiserror = "1.0"
num-traits = "0.2"
paste = "1.0"
rustc-hash = "1.1"
libc = "0.2"
libloading = "0.8"
ahash = "0.8"

[dev-dependencies]
rand = "0.8"
libafl = "0.13"
libafl_bolts = "0.13"
clap = { version = "4.4", features = ["derive"] }
serde = "1.0"
mimalloc = { version = "0.1", default-features = false }

[features]
default = ["tui"]

# Enables animations in the terminal
tui = []

[[example]]
name = "readelf_fuzzer"
path = "../examples/readelf/readelf-fuzzer.rs"

[[example]]
name = "helloworld"
path = "../examples/helloworld/run-helloworld.rs"

[[example]]
name = "readme-demo"
path = "../examples/readme-demo/demo.rs"

[[example]]
name = "exim_fuzzer"
path = "../examples/exim/exim-fuzzer.rs"
