[package]
name = "squid_ewe"
readme = "README.md"
description = "A helper tool for squid that extracts CFG metadata from C code"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
goblin = { version = "0.6", features = ["std", "elf32", "elf64"]}
