[package]
name = "squid-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[dev-dependencies]
ewe = { path = "../ewe" }
squid = { path = "../squid" }
libafl = "0.12.0"
libafl_bolts = "0.12.0"
serde = "1.0"
mimalloc = { version = "0.1", default-features = false }

[[test]]
name = "benchmark"
path = "benchmark/benchmark.rs"
