[package]
name = "squid-tests"
edition.workspace = true
publish = false

[dev-dependencies]
squid_ewe = { path = "../squid_ewe" }
squid = { path = "../squid" }
libafl = "0.13"
libafl_bolts = "0.13"
serde = "1.0"
mimalloc = { version = "0.1", default-features = false }

[[test]]
name = "benchmark"
path = "benchmark/benchmark.rs"
